--- a/app/views/state/index.html.erb
+++ b/app/views/state/index.html.erb
@@ -2,7 +2,7 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
 <br><br>
 <div class="container-fluid" ng-app="markovApp" ng-controller="stateCtrl" ng-cloak>
-  <div class="col-xs-offset-1 col-xs-10">
+  <div class="col-md-offset-1 col-md-10 col-xs-12">
     <div class="panel panel-primary">
       <div class="panel-heading">
         Talk to the hand!
@@ -10,26 +10,26 @@
       <div class="panel-body">
         <div class="form-horizontal">
           <div class="form-group">
-            <label class="control-label col-xs-2">Antal forrige ord til at finde det næste</label>
-            <div class="col-xs-5">
+            <label class="control-label col-xs-12 col-md-2">Antal forrige ord til at finde det næste</label>
+            <div class="col-xs-12 col-xs-6">
               <input type="number" class="form-control" ng-model="left_size">
             </div>
           </div>
           <div class="form-group">
-            <label class="control-label col-xs-2">Antal ord der skal findes baseret på overstående</label>
-            <div class="col-xs-5">
+            <label class="control-label col-xs-12 col-md-2">Antal ord der skal findes baseret på overstående</label>
+            <div class="col-xs-12 col-md-6">
               <input type="number" class="form-control" ng-model="right_size">
             </div>
           </div>
           <div class="form-group">
-            <label class="control-label col-xs-2">Input</label>
-            <div class="col-xs-5">
+            <label class="control-label col-xs-12 col-md-2">Input</label>
+            <div class="col-xs-12 col-md-6">
               <input type="text" class="form-control" ng-model="left">
             </div>
           </div>
           <div class="form-group">
-            <label class="control-label col-xs-2"></label>
-            <div class="col-xs-5">
+            <label class="control-label col-xs-12 col-md-2"></label>
+            <div class="col-xs-12 col-md-6">
               <button type="button" class="btn btn-primary" ng-click="start();">Go!</button>
             </div>
           </div>
@@ -42,16 +42,7 @@
         Output
       </div>
       <div class="panel-body">
-        <textarea ng-model="result" class="form-control" rows="8"></textarea>
-      </div>
-    </div>
-
-    <div class="panel panel-primary">
-      <div class="panel-heading">
-        Om
-      </div>
-      <div class="panel-body">
-        Lololo...
+        <textarea ng-model="result" class="form-control" rows="12"></textarea>
       </div>
     </div>
   </div>
