--- a/app/views/state/index.html.erb
+++ b/app/views/state/index.html.erb
@@ -1,3 +1,4 @@
+
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
 <br><br>
@@ -11,7 +12,7 @@
         <div class="form-horizontal">
           <div class="form-group">
             <label class="control-label col-xs-12 col-md-2">Antal forrige ord til at finde det næste</label>
-            <div class="col-xs-12 col-xs-6">
+            <div class="col-xs-12 col-md-6">
               <input type="number" class="form-control" ng-model="left_size">
             </div>
           </div>
